fix: trying to fix locales

--- a/locales/cs.yml
+++ b/locales/cs.yml
@@ -1,4 +1,5 @@
 cs:
-    button:
-        label: 'Uzavřít'
-        title: 'zavře toto téma a notifikuje uživatele'
+    close_notify:
+        button:
+            label: 'Uzavřít'
+            title: 'zavře toto téma a notifikuje uživatele'
