--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,5 +1,9 @@
 en:
     close_notify:
         button:
-            label: 'Close'
-            title: 'close topic and notify users'
+            close:
+                label: 'Close'
+                title: 'close topic and notify users'
+            open:
+                label: 'Open'
+                title: 'open topic and notify users'
